--- a/categories.css
+++ b/categories.css
@@ -10,6 +10,16 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
+#particles-js {
+	width: 100%;
+	height: 100%;
+	background-color: #b61924;
+	background-image: url('');
+	background-size: cover;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+}
+
 .navcolor {
 	background-color: #262833;
 	/* background-color: #26242e; */
