--- a/categories.css
+++ b/categories.css
@@ -10,16 +10,6 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
-#particles-js {
-	width: 100%;
-	height: 100%;
-	background-color: #b61924;
-	background-image: url('');
-	background-size: cover;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-}
-
 .navcolor {
 	background-color: #262833;
 	/* background-color: #26242e; */
@@ -179,7 +169,10 @@ body {
 	z-index: 100000;
 	transform: translateZ(0);
 }
-
+.disappear{
+	display:none;
+	transition: all 0.6s ease-in-out;
+}
 .overlay {
 	width: 118px;
 	position: absolute;
