--- a/categories.css
+++ b/categories.css
@@ -14,7 +14,7 @@ body {
 	background-color: #262833;
 	/* background-color: #26242e; */
 }
-/* testing git push */
+/*  */
 .margtop {
 	margin-top: 4em;
 }
