--- a/rules.css
+++ b/rules.css
@@ -4,18 +4,19 @@
 
 body {
 	background: #161618;
+
 	text-align: center;
 	margin: 0;
 	font-family: 'Poppins', sans-serif;
 	padding-top: 70px;
-	z-index: 5;
+
 	color: #f2f4f8;
 }
 
 #particles-js {
-	height: 100%;
+	height: 100vh;
 	background: #161618;
-	z-index: -1;
+	/* z-index: -1 !important; */
 }
 
 .navcolor {
@@ -60,4 +61,22 @@ a:hover {
 .disappear {
 	display: none;
 	transition: all 0.6s ease-in-out;
+}
+
+ol {
+	text-align: left;
+}
+
+.space {
+	padding: 30px;
+}
+
+.heading {
+	position: absolute;
+	text-align: center;
+	width: 100%;
+}
+
+.list {
+	text-align: center;
 }
