--- a/leaderboard.css
+++ b/leaderboard.css
@@ -45,8 +45,7 @@ body {
 
 .cardn {
 	width: 100%;
-
-	background: #fff;
+	background: #1a1a1a;
 	border-radius: 10px;
 	overflow: hidden;
 	display: flex;
@@ -58,6 +57,7 @@ body {
 	transition: all 0.3s ease-out;
 	text-decoration: none;
 	margin-bottom: 50px;
+	color: white;
 }
 
 .cardn:hover {
@@ -159,15 +159,15 @@ td {
 
 .circleout {
 	width: 100%;
-	height: 50%;
+	height: 60%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #06d6a0;
+	background-color: #5055cb;
 	overflow: hidden;
 }
 .circle {
-	background-color: #432874;
+	background-color: white;
 	width: 150px;
 	height: 150px;
 	border-radius: 50%;
@@ -191,6 +191,63 @@ button {
 	font-size: 18px;
 }
 
-h2 {
+h3 {
 	color: #888dff;
+}
+
+.ladder-nav {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	background: #5055cb;
+	padding: 10px 25px;
+}
+
+.ladder-title {
+	flex: 1;
+}
+
+.leaderboard-results {
+	text-align: left;
+	border-collapse: collapse;
+}
+
+/*  */
+.leaderboard-results thead th {
+	padding: 15px 25px;
+	color: #747474;
+	font-size: 14px;
+	font-weight: bold;
+	background-color: #232323;
+}
+.leaderboard-results tbody td {
+	padding: 10px 25px;
+	background: #1a1a1a;
+	font-size: 16px;
+	border-bottom: 5px solid #232323;
+}
+.leaderboard-results tbody td:nth-of-type(7) {
+	font-weight: bold;
+}
+.leaderboard-results tbody tr:hover td {
+	background: #1d1d1d;
+}
+.leaderboard-results tbody tr {
+	color: #747474;
+}
+.leaderboard-results tbody tr:first-child {
+	color: #686ef9;
+}
+.leaderboard-results tbody span {
+	font-weight: bold;
+	padding: 10px 15px;
+	border-radius: 50%;
+}
+.leaderboard-results tbody tr:first-child span {
+	background: #5055cb;
+	color: white;
+}
+.leaderboard-results tbody tr span {
+	background: #262626;
+	color: #747474;
 }
