--- a/quiz.css
+++ b/quiz.css
@@ -1,71 +1,114 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-    font-family: Open Sans;
+	font-family: 'Poppins', sans-serif;
 }
 
 h1 {
-    text-align: center;
+	text-align: center;
+	font-weight: 600;
+	color: #06d6a0;
+}
+h2 {
+	text-align: left;
 }
 
 #title {
-    text-decoration: underline;
 }
 
-#quiz {
-    text-indent: 10px;
-    display:none;
+/* #quiz {
+	text-indent: 10px;
+	display: none;
+} */
+
+.big {
+	font-size: large;
 }
 
 .button {
-    border:4px solid;
-    border-radius:5px;
-    width: 40px;
-    padding-left:5px;
-    padding-right: 5px;
-    position: relative;
-    float:right;
-    background-color: #DCDCDC;
-    color: black;
-    margin: 0 2px 0 2px;
+	border: 4px solid;
+	border-radius: 5px;
+	width: 40px;
+	padding-left: 5px;
+	padding-right: 5px;
+	position: relative;
+	float: right;
+	background-color: #dcdcdc;
+	color: black;
+	margin: 0 2px 0 2px;
 }
 
 .button.active {
-    background-color: #F8F8FF;
-    color: #525252;
+	background-color: #f8f8ff;
+	color: #525252;
 }
 
 button {
-    position: relative;
-    float:right;
+	position: relative;
+	float: right;
 }
 
 .button a {
-    text-decoration: none;
-    color: black;
+	text-decoration: none;
+	color: black;
 }
 
-#container {
-    width:50%;
-    margin:auto;
-    padding: 0 25px 40px 10px;
-    background-color: #1E90FF;
-    border:4px solid #B0E0E6;
-    border-radius:5px;
-    color: #FFFFFF;
-    font-weight: bold;
-    box-shadow: 5px 5px 5px #888;
+.choice-container {
+	display: flex;
+	margin-bottom: 1rem;
+	padding: 10px 0 10px 20px;
+	width: 100%;
+	font-size: 1.2rem;
+	font-weight: 600;
+	border: 0.1rem solid rgb(131, 56, 236, 0);
+	background-color: white;
+	border-radius: 10px;
 }
+
+.choice-container:hover {
+	cursor: pointer;
+	box-shadow: 0 0.4rem 1.4rem 0 rgba(131, 56, 236, 0.3);
+	transform: translateY(-0.1rem);
+	transition: transform 150ms;
+}
+
+input[type=radio],
+input.radio {
+	margin-top: 8px;
+	margin-right: 10px;
+	width: 0.8em;
+	height: 0.8em;
+}
+/* #container {
+	width: 50%;
+	margin: auto;
+	padding: 0 25px 40px 10px;
+	background-color: #1e90ff;
+	border: 4px solid #b0e0e6;
+	border-radius: 5px;
+	color: #ffffff;
+	font-weight: bold;
+	box-shadow: 5px 5px 5px #888;
+} */
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	text-align: left;
 }
 
 #prev {
-    display:none;
+	display: none;
 }
 
 #start {
-    display:none;
-    width: 90px;
+	display: none;
+	width: 90px;
+}
+
+.container {
+	width: 50%;
 }
