--- a/quiz.css
+++ b/quiz.css
@@ -5,17 +5,23 @@
 body {
 	font-family: 'Poppins', sans-serif;
 }
-
-h1 {
-	text-align: center;
-	font-weight: 600;
-	color: #06d6a0;
+h1{
+	color: #ef476f;
 }
+
+
 h2 {
 	text-align: left;
 }
-
-#title {
+.question{
+	text-align: center;
+	font-weight: 600;
+   color: #ef476f;
+}
+.quiz-title{
+	text-align: center;
+	font-weight: 600;
+   color: #06d6a0;
 }
 
 /* #quiz {
@@ -27,16 +33,16 @@ h2 {
 	font-size: large;
 }
 
-.button {
-	border: 4px solid;
+.btn {
+	border: 2px solid black;
 	border-radius: 5px;
-	width: 40px;
+	width: 60px;
 	padding-left: 5px;
 	padding-right: 5px;
 	position: relative;
 	float: right;
-	background-color: #dcdcdc;
-	color: black;
+	/* background-color: #dcdcdc; */
+	/* color: white; */
 	margin: 0 2px 0 2px;
 }
 
@@ -105,6 +111,7 @@ ul {
 }
 
 #start {
+    float: right;
 	display: none;
 	width: 90px;
 }
