--- a/quiz.css
+++ b/quiz.css
@@ -5,23 +5,22 @@
 body {
 	font-family: 'Poppins', sans-serif;
 }
-h1{
+h1 {
 	color: #ef476f;
 }
-
 
 h2 {
 	text-align: left;
 }
-.question{
+.question {
 	text-align: center;
 	font-weight: 600;
-   color: #ef476f;
+	color: #ef476f;
 }
-.quiz-title{
+.quiz-title {
 	text-align: center;
 	font-weight: 600;
-   color: #06d6a0;
+	color: #06d6a0;
 }
 
 /* #quiz {
@@ -34,7 +33,7 @@ h2 {
 }
 
 .btn {
-	border: 2px solid black;
+	/* border: 2px solid black; */
 	border-radius: 5px;
 	width: 60px;
 	padding-left: 5px;
@@ -49,6 +48,13 @@ h2 {
 .button.active {
 	background-color: #f8f8ff;
 	color: #525252;
+}
+
+.btn:hover {
+	cursor: pointer;
+	box-shadow: 0 0.4rem 1.4rem 0 rgba(131, 56, 236, 0.3);
+	transform: translateY(-0.1rem);
+	transition: transform 150ms;
 }
 
 button {
@@ -111,7 +117,7 @@ ul {
 }
 
 #start {
-    float: right;
+	float: right;
 	display: none;
 	width: 90px;
 }
